--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "redux-selectors-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Ulyt1703.github.io/D__redux-selectors-demo",
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.2",
     "@testing-library/dom": "^10.4.1",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
