--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,14 @@
 /.pnp
 .pnp.js
 
+package-lock.json
+
 # testing
 /coverage
 
 # production
 /build
+dist/
 
 # misc
 .DS_Store
@@ -21,3 +24,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/public/logo192.png
+/public/logo512.png
+/public/favicon.ico
